Fixed the alignment issue with Mozilla Logo in footer.
The Firefox logo in footer is overlapping the text in the footer, its fixed with small edit in the CSS.

--- a/media/jetpack/css/UI.Layout.css
+++ b/media/jetpack/css/UI.Layout.css
@@ -524,7 +524,7 @@ kbd {
 }
 
 #footer div.UI_middleWrapper {
-	background: url(../img/mozilla/logo-mozilla.gif) no-repeat 15px 0;
+	background: url(../img/mozilla/logo-mozilla.gif) no-repeat 0;
 	
 }
 #footer .primary {
